--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.5.6"
+    "astro": "^5.7.12"
   },
   "devDependencies": {
-    "@astrojs/tailwind": "^5.1.0",
-    "tailwindcss": "^3.4.1",
-    "@typescript-eslint/parser": "^7.3.1",
+    "@astrojs/tailwind": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
+    "@typescript-eslint/parser": "^7.3.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.57.0",
     "eslint-plugin-astro": "^0.31.4",
     "prettier": "^3.2.5",
-    "prettier-plugin-astro": "^0.13.0"
+    "prettier-plugin-astro": "^0.13.0",
+    "tailwindcss": "^3.4.1"
   }
 }
